Updating & reformatting QiC CS modules (#3822)
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/modules/computer-science/quantum-teleportation.ipynb
+++ b/learning/modules/computer-science/quantum-teleportation.ipynb
@@ -12,11 +12,24 @@
     "- `qiskit-ibm-runtime` v0.40.1 or newer\n",
     "- `qiskit-aer` v0.17.0 or newer\n",
     "- `qiskit.visualization`\n",
+    "- `numpy`\n",
+    "- `pylatexenc`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
     "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide.\n",
     "\n",
     "This module was tested and used 14 seconds of QPU time. This is an estimate only. Your actual usage may vary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0df1108e-f1ac-4e75-96c2-3d8b5992504e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment and modify this line as needed to install dependencies\n",
+    "#!pip install 'qiskit>=2.1.0' 'qiskit-ibm-runtime>=0.40.1' 'qiskit-aer>=0.17.0' 'numpy' 'pylatexenc'"
    ]
   },
   {
@@ -578,12 +591,14 @@
     "\n",
     "This step takes the operations we want to perform and expresses them in terms of the functionality of a specific quantum computer. It also maps our problem onto the layout of the quantum computer.\n",
     "\n",
-    "We will start by loading several packages that are required to communicate with IBM quantum computers. We must also select a backend on which to run. We can either choose the least busy backend, or select a specific backend whose properties we know."
+    "We will start by loading several packages that are required to communicate with IBM quantum computers. We must also select a backend on which to run. We can either choose the least busy backend, or select a specific backend whose properties we know.\n",
+    "\n",
+    "There is code below for saving your credentials upon first use. Be sure to delete this information from the notebook after saving it to your environment, so that your credentials are not accidentally shared when you share the notebook. See [Set up your IBM Cloud account](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) and [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) for more guidance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8f24b6b9-db1b-4077-8660-e355e377807e",
    "metadata": {},
    "outputs": [
@@ -599,12 +614,39 @@
     "# Load the Qiskit Runtime service\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
+    "# Load the Qiskit Runtime service\n",
+    "\n",
+    "# Syntax for first saving your token.  Delete these lines after saving your credentials.\n",
+    "# QiskitRuntimeService.save_account(channel='ibm_quantum_platform', instance = '<MY_IBM_INSTANCE_CRN>', token='<MY_IBM_QUANTUM_TOKEN>', overwrite=True, set_as_default=True)\n",
+    "# service = QiskitRuntimeService(channel='ibm_quantum_platform')\n",
+    "\n",
+    "# Load saved credentials\n",
     "service = QiskitRuntimeService()\n",
     "\n",
     "# Use the least busy backend, or uncomment the loading of a specific backend like \"ibm_brisbane\".\n",
     "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)\n",
     "# backend = service.backend(\"ibm_brisbane\")\n",
     "print(backend.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35bb9c51-a573-4363-89ed-2159aaa1976f",
+   "metadata": {},
+   "source": [
+    "We explicitly enable logic on measurements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e238e397-33f2-4fa1-99b1-94c78dd966f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit.circuit import IfElseOp\n",
+    "\n",
+    "backend.target.add_instruction(IfElseOp, name=\"if_else\")"
    ]
   },
   {
@@ -661,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2332b984-cff6-4022-b7fa-f100d35a2719",
    "metadata": {},
    "outputs": [],
@@ -673,8 +715,6 @@
     "from qiskit_aer import AerSimulator\n",
     "from qiskit_aer.noise import NoiseModel\n",
     "\n",
-    "from qiskit.providers.fake_provider import GenericBackendV2\n",
-    "\n",
     "\n",
     "noise_model = NoiseModel.from_backend(backend)\n",
     "\n",
@@ -683,8 +723,8 @@
     "sampler_sim = BackendSamplerV2(backend=backend_sim)\n",
     "\n",
     "# Alternatively, load a fake backend with generic properties and define a simulator.\n",
-    "backend_gen = GenericBackendV2(num_qubits=18)\n",
-    "sampler_gen = BackendSamplerV2(backend=backend_gen)"
+    "# backend_gen = GenericBackendV2(num_qubits=18)\n",
+    "# sampler_gen = BackendSamplerV2(backend=backend_gen)"
    ]
   },
   {
@@ -699,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "cbf63f9a-5b93-4bbd-b527-f3892e2188bd",
    "metadata": {},
    "outputs": [],
@@ -707,11 +747,7 @@
     "job = sampler.run([qc_isa])\n",
     "# job = sampler_sim.run([qc_isa])\n",
     "res = job.result()\n",
-    "counts = res[0].data.c.get_counts()\n",
-    "\n",
-    "# job = sampler_gen.run([qc_isa])\n",
-    "# res=job.result()\n",
-    "# counts=res[0].data.c.get_counts()"
+    "counts = res[0].data.c.get_counts()"
    ]
   },
   {
@@ -777,11 +813,11 @@
    "id": "cd75b04b-2d2d-4d87-b6cc-b0fed440d912",
    "metadata": {},
    "source": [
-    "## 5. Experiment 2: Teleporting across a processor\n",
+    "## Experiment 2: Teleporting across a processor\n",
     "\n",
     "Arguably, the most interesting part of quantum teleportation is that a quantum state can be teleported over long distances instantly (though the classical communication of extra gates is not instant). As already stated, we can't break qubits off the processor and move them around. But we can move the information from one qubit to another, until the qubits involved in teleportation are on opposite sides of the processor. Let us repeat the steps we took above, but now we will make a larger circuit with enough qubits to span the processor.\n",
     "\n",
-    "### 5.1. Step 1: Map your problem to a quantum circuit\n",
+    "### Step 1: Map your problem to a quantum circuit\n",
     "\n",
     "This time, the qubits corresponding to Alice and Bob will change. So we will not name a single qubit \"A\" and another \"B\". Rather, we will number the qubits and use variables to represent the current position of the information on qubits belonging to Alice and Bob. All other steps except the swap gates are as described previously."
    ]
@@ -878,7 +914,7 @@
    "source": [
     "You can see in the circuit diagram that the logical steps are the same. The only difference is that we used the swap gates to bring Alice's qubit's state from qubit 6 ($A_5$) up to qubit 1 ($A_0$), right next to Q. And we used swap gates to bring Bob's initial state from qubit 7 ($B_0$) down to qubit 12 ($B_5$). Note that the state on qubit 12 is not even related to Q's secret state until measurements are made on the distant qubits 0 and 1, and the state on qubit 12 is not equal to the secret state until after the conditional $X$ and $Z$ gates are applied.\n",
     "\n",
-    "### 5.2.  Step 2: Optimize your circuit\n",
+    "### Step 2: Optimize your circuit\n",
     "\n",
     "Normally, when we use the pass manager to transpile and optimize our circuits, it makes sense to set ```optimization_level = 3```, because we want our circuits to be as efficient as possible. In this case, there is no computational reason for us to transfer states from qubits 6 and 7 over to qubits 1 and 12. That was just something we did to demonstrate teleportation over a distance. If we ask the pass manager to optimize our circuit, it will realize there is no logical reason for these swap gates, and it will remove them and carry out the gate operations on adjacent qubits. So for this special case, we use ```optimization_level = 0```."
    ]
@@ -922,7 +958,7 @@
    "id": "6a74e5a5-d32f-41a5-adf8-29174a0d5e8a",
    "metadata": {},
    "source": [
-    "### 5.3 Step 3: Run\n",
+    "### Step 3: Execute\n",
     "\n",
     "As before, we recommend running on real IBM quantum computers. If your monthly free usage has been reached, feel free to uncomment the simulator cells to run on a simulator."
    ]
@@ -968,7 +1004,7 @@
    "id": "49ed3ba0-3482-4ad5-84c3-f8fba80d8668",
    "metadata": {},
    "source": [
-    "### 5.4. Step 4: Classical post-processing\n",
+    "### Step 4: Classical post-processing\n",
     "\n",
     "Again we see that the probabilities for the possible outcomes for Alice's qubits are fairly uniform. There is a strong preference for finding Bob's qubit in $|0\\rangle$ after inverting the secret code, meaning there is a strong probability that we correctly teleported the secret state across the processor from Q to Bob (qubits 0 to 12). However, we note that there is now about a higher chance of *not* measuring $|0\\rangle$ for Bob. This is an important lesson in quantum computing: the more gates you have, especially multi-qubit gates like swap gates, the more noise and errors you will encounter."
    ]
@@ -978,7 +1014,9 @@
    "id": "ede2724d-536b-472a-b4bd-b1276b5b851d",
    "metadata": {},
    "source": [
-    "## 6. Review and questions\n",
+    "## Questions\n",
+    "\n",
+    "Instructors can request versions of these notebooks with answer keys and guidance on placement in common curricula by filling out this [quick survey](https://ibm.biz/classrooms_instructor_key_request) on how the notebooks are being used.\n",
     "\n",
     "### Critical concepts\n",
     "\n",
@@ -1044,6 +1082,8 @@
  ],
  "metadata": {
   "description": "Explore how quantum teleportation transfers a quantum state from one location to another using the principles of quantum entanglement.",
+  "in_page_toc_max_heading_level": 2,
+  "in_page_toc_min_heading_level": 2,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
