--- a/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -964,7 +964,7 @@
     "\n",
     "Although we initially used a simulator to debug our code, we really want to run on real hardware. After all, a simulator is just pretending to be quantum mechanical, based on the equations above. If the simulator told us those equations were correct, that wouldn't do much to convince us. We want a real quantum computer to tell us what's happening! So we'll select the quantum computer we want to use. Sometimes it might be important to pick a specific device that has properties you want, but often we simply want to use whatever device is least busy.\n",
     "\n",
-    "Syntax is copied below for saving your credentials upon first use. Please take care to delete this information from the notebook once it is saved to your environment, so that your credentials are not accidentally shared when you share the notebook. See [this page](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) for more guidance, and see [this page](/docs/guides/cloud-setup-untrusted) specifically for working in an untrusted environment."
+    "There is code below for saving your credentials upon first use. Be sure to delete this information from the notebook after saving it to your environment, so that your credentials are not accidentally shared when you share the notebook. See [Set up your IBM Cloud account](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) and [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) for more guidance."
    ]
   },
   {
@@ -1251,6 +1251,10 @@
    "id": "b315516c-53c2-4830-8130-eb535d466a67",
    "metadata": {},
    "source": [
+    "## Questions\n",
+    "\n",
+    "Instructors can request versions of these notebooks with answer keys and guidance on placement in common curricula by filling out this [quick survey](https://ibm.biz/classrooms_instructor_key_request) on how the notebooks are being used.\n",
+    "\n",
     "### Critical concepts:\n",
     "\n",
     "- There was a historical disagreement about whether quantum states were merely unknown or undetermined by nature prior to measurement, whether quantum mechanics is deterministic or probabilistic.\n",
@@ -1260,8 +1264,6 @@
     "- Entanglement is not just correlations.\n",
     "- We can map real world scenarios to quantum computers.\n",
     "- Hidden variables refers to quantities specified by nature, but unknown to humans; they do not exist in this context.\n",
-    "\n",
-    "## Questions\n",
     "\n",
     "### T/F questions:\n",
     "\n",
