--- a/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb
@@ -326,7 +326,7 @@
     "\n",
     "To run our experiment on a real quantum computer, we need to load Qiskit Runtime Service, and select a quantum computer (or a \"backend\"). Below, we simply select the least busy quantum computer available to us.\n",
     "\n",
-    "Syntax is copied below for saving your credentials upon first use. Please take care to delete this information from the notebook once it is saved to your environment, so that your credentials are not accidentally shared when you share the notebook. See [this page](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) for more guidance, and see [this page](/docs/guides/cloud-setup-untrusted) specifically for working in an untrusted environment."
+    "There is code below for saving your credentials upon first use. Be sure to delete this information from the notebook after saving it to your environment, so that your credentials are not accidentally shared when you share the notebook. See [Set up your IBM Cloud account](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) and [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) for more guidance."
    ]
   },
   {
@@ -1348,6 +1348,8 @@
    "metadata": {},
    "source": [
     "## Questions\n",
+    "\n",
+    "Instructors can request versions of these notebooks with answer keys and guidance on placement in common curricula by filling out this [quick survey](https://ibm.biz/classrooms_instructor_key_request) on how the notebooks are being used.\n",
     "\n",
     "### Critical concepts:\n",
     "\n",
