--- a/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "Let's start by loading some necessary packages including Runtime primitives. We will also select the least-busy quantum computer available to us.\n",
     "\n",
-    "Syntax is copied below for saving your credentials upon first use. Please take care to delete this information from the notebook once it is saved to your environment, so that your credentials are not accidentally shared when you share the notebook. See [this page](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) for more guidance, and see [this page](/docs/guides/cloud-setup-untrusted) specifically for working in an untrusted environment."
+    "There is code below for saving your credentials upon first use. Be sure to delete this information from the notebook after saving it to your environment, so that your credentials are not accidentally shared when you share the notebook. See [Set up your IBM Cloud account](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) and [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) for more guidance."
    ]
   },
   {
@@ -184,7 +184,7 @@
     "\n",
     "### Step 1: Map classical inputs to a quantum problem\n",
     "\n",
-    "In this case, the mapping step is simply expressing the measurements and rotations descrive above in a quantum circuit:"
+    "In this case, the mapping step is simply expressing the measurements and rotations described above in a quantum circuit:"
    ]
   },
   {
@@ -1317,6 +1317,10 @@
    "id": "b89eaae3-6ea9-486c-b93c-55431839d5f1",
    "metadata": {},
    "source": [
+    "## Questions\n",
+    "\n",
+    "Instructors can request versions of these notebooks with answer keys and guidance on placement in common curricula by filling out this [quick survey](https://ibm.biz/classrooms_instructor_key_request) on how the notebooks are being used.\n",
+    "\n",
     "### Critical concepts:\n",
     "\n",
     "- There are uncertainty relations between many sets of physical observables, including position & linear momentum, and components of spin.\n",
@@ -1327,8 +1331,6 @@
     "- An eigenstate $|a\\rangle$ of some operator $A$ will yield a larger uncertainty for an operator $B$ that does not commute with $A$.\n",
     "- Experimental results using a real quantum computer confirm the intuition we gain from matrix representations of physical operators.\n",
     "\n",
-    "\n",
-    "## Questions\n",
     "\n",
     "### T/F Questions:\n",
     "\n",
