--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -45,20 +45,19 @@ The revision version number will increment for fixes that do not break the exist
 
 The first section of the QPU information card provides the following QPU details: 
 
-*   **Name** - The unique name assigned to a specific QPU. QPUs hosted on IBM Cloud® have names that begin with `ibm_*`. All QPUs are given a city name, e.g., `ibm_kingston`. This name does not indicate where the actual QPU is hosted. They are named after IBM&reg; locations around the world.
-*   **Qubits** - The number of physical qubits in a QPU.
-*   **2Q error (best)** - The lowest two-qubit (2Q) error on any edge of the device from the same batch of measurements used to calculate the median.
-*   **2Q error (layered)** - Average error per layered gate (EPLG) in a chain of 100 qubits. Average EPLG measures the average gate error in a layered chain of $N$ qubits ($N$=100 here). It is derived from a similar quantity known as the layer fidelity (LF) where EPLG$_{100}$ = 4/5(1-LF$^{\frac{1}{99}}$) and layer fidelity is the process fidelity of the layered chain of $N$ qubits. For details, see the paper [Benchmarking quantum processor performance at scale](https://arxiv.org/abs/2311.05933). Note that in the paper EPLG is defined for process error, but for consistency with the individually reported gate errors here it is quoted for average gate error, thus the factor of 4/5.
-*   **CLOPS** (or CLOPS_h) - Circuit layer operations per second, is a measure of how many layers of a 100x100 circuit (hardware-aware circuit) a QPU (quantum processing unit) can execute per unit of time.
-*   **Status** - The QPU status.
-*   **Region** - Location of the data center where your data and experiments will be hosted and processed.
+* **Name** - The unique name assigned to a specific QPU. QPUs hosted on IBM Cloud® have names that begin with `ibm_*`. All QPUs are given a city name, e.g., `ibm_kingston`. This name does not indicate where the actual QPU is hosted. They are named after IBM&reg; locations around the world.
+* **Qubits** - The number of physical qubits in a QPU.
+* **2Q error (layered)** - Average error per layered gate (EPLG) in a chain of 100 qubits. Average EPLG measures the average gate error in a layered chain of $N$ qubits ($N$=100 here). It is derived from a similar quantity known as the layer fidelity (LF) where EPLG$_{100}$ = 4/5(1-LF$^{\frac{1}{99}}$) and layer fidelity is the process fidelity of the layered chain of $N$ qubits. For details, see the paper [Benchmarking quantum processor performance at scale](https://arxiv.org/abs/2311.05933). Note that in the paper EPLG is defined for process error, but for consistency with the individually reported gate errors here it is quoted for average gate error, thus the factor of 4/5.
+* **CLOPS** (or CLOPS_h) - Circuit layer operations per second, is a measure of how many layers of a 100x100 circuit (hardware-aware circuit) a QPU (quantum processing unit) can execute per unit of time.
+* **Status** - The QPU status.
+* **Region** - Location of the data center where your data and experiments will be hosted and processed.
 * **QPU version** - The version number of a QPU in the form `major.minor.revision`. See [QPU versioning](#qpu-versioning) for details on how this number is assigned.
-*   **Processor type** - Reflects the [topology](/docs/guides/qpu-information) and indicates the approximate qubit count.
+* **Processor type** - Reflects the [topology](/docs/guides/qpu-information) and indicates the approximate qubit count.
 * **Basis gates** <span id="native-gates-on-platform"></span> - Each [processor family](/docs/guides/processor-types) has a native gate set. By default, the QPUs in each family only support running the gates and operations in the native gate set. Thus, every gate in the circuit must be translated (by the transpiler) to the elements of this set. Note that the non-unitary operations are not listed here; use the [method in Qiskit](/docs/guides/get-qpu-information#native-gates-with-qiskit) to see all native gates and operations for a QPU. See a list of all native gates in [this table](#native-gates).
 * **Total pending jobs** - The total number of jobs that you have submitted to this QPU.
 * **Median 2Q error** (Heron: CZ, Eagle: ECR) - [Average gate fidelity](/docs/api/qiskit/quantum_info#average_gate_fidelity) of the two-qubit operation from randomized benchmarking. Measured in "isolation": batches with a minimum separation of two qubits between edges. This randomized benchmarking uses alternating layers of single-qubit Cliffords and two-qubit gates, and thus the final 2Q error value includes the error of the layer of single-qubit Cliffords.
+* **2Q error (best)** - The lowest two-qubit (2Q) error on any edge of the device from the same batch of measurements used to calculate the median.
 * **Median SX error** - [Average gate fidelity](/docs/api/qiskit/quantum_info#average_gate_fidelity) of the √X (SX) gate from randomized benchmarking, measured simultaneously on all qubits. The randomized benchmarking sequence includes SX, ID, and X gates, and it is assumed their errors are the same.
-
 * **Median readout error** - Fidelity of the readout operation. Readout error is measured by preparing the qubit in the 0 (1) state and measuring the probability of an output in the 1 (0) state. The reported value is the average of these two errors. The median is taken over all qubits.
 * **Median T1** (Relaxation Time) - The T1 time represents the average duration a qubit remains in its excited state $|1\rangle$ before decaying to its ground state $|0\rangle$ due to energy relaxation. This parameter is used to characterize the qubit's energy relaxation behavior, and is expressed in units of seconds (s).
 * **Median T2** (Dephasing Time) - The T2 time denotes the timescale over which a qubit maintains phase coherence of a superposition between the $|0\rangle$ and $|1\rangle$ states. It accounts for both energy relaxation and pure dephasing processes, providing insight into the qubit's coherence properties. T2 is reported from a Hahn echo sequence.
@@ -79,17 +78,17 @@ In addition to the information provided in the Details section of the card, the 
 * **Prob meas0 prep1**: This parameter indicates the probability of measuring a qubit in the $|0\rangle$ state when it was intended to be prepared in the $|1\rangle$ state, denoted as $P(0|1)$. It reflects errors in state preparation and measurement (SPAM), particularly measurement errors in superconducting qubits.
 * **Prob meas1 prep0**: Similarly, this parameter represents the probability of measuring a qubit in the $|1\rangle$ state when it was intended to be prepared in the $|0\rangle$ state, denoted as $P(1|0)$. Like prob_meas0_prep1, it reflects SPAM errors, with measurement errors being the predominant contributor in superconducting qubits.
 * **Readout length (ns)**: The readout_length specifies the duration of the readout operation for a qubit. It measures the time from the initiation of the measurement pulse to the completion of signal digitization, after which the system is ready for the next operation. Understanding this parameter is crucial for optimizing circuit execution, especially when incorporating mid-circuit measurements.
-* **ID error** - Identity gate error, measured from randomized benchmarking. The identity gate is a delay of duration equal to the duration of the √x (SX) and X gates. The randomized benchmarking sequence includes SX, ID, and X gates, and it is assumed their errors are the same.
+* **ID error** - Error in the identity gate, measured from randomized benchmarking. The ID gate is a delay of duration equal to the duration of the √X and X gates. The randomized benchmarking sequence includes SX, ID, and X gates, and it is assumed their errors are the same.
+* **√x (sx) error** - Error in the √X gate, assumed to be the same error as the ID gate measured from randomized benchmarking.
+* **Pauli-X error** - Error in the X gate, assumed to be the same error as the ID gate measured from randomized benchmarking.
 * **Single-qubit gate length (ns)** - Duration of a single-qubit gate operation.
-* **RX error** - RX gate error, averaged over the RX angles using a variant of randomized benchmarking.
-* **Z-axis rotation (RZ) error** - Error of the virtual RZ gate. Reported as all 0 since these are performed in software.
-* **√x (sx) error**:
-* **Pauli-X error** - Error in the X gate, assumed to be the same error as the √x (SX) gate measured from randomized benchmarking.
-* **Gate length (ns)** - Duration of the two-qubit gate operation.
-* **RZZ error** (Heron) - Error in the RZZ gate averaged over the RZZ angles using a variant of randomized benchmarking for arbitrary unitaries.
-* **CZ error** (Heron) - Error in the CZ gate averaged over the CZ angles using a variant of randomized benchmarking for arbitrary unitaries.
-* **ECR error** (Eagle) - Error in the ECR gate averaged over the ECR angles using a variant of randomized benchmarking for arbitrary unitaries.
+* **RX error** - Error in the RX gate, averaged over the RX angles using a variant of randomized benchmarking.
+* **Z-axis rotation (RZ) error** - Error in the virtual RZ gate. Reported as all 0 since these are performed in software.
 * **Operational** (Yes/No) - Indicates whether the qubit can be utilized in circuits.
+* **Gate length (ns)** - Duration of the two-qubit gate operation.
+* **2Q error (best)** (Heron: CZ, Eagle: ECR) - Error in the 2Q gate averaged over the 2Q angles using a variant of randomized benchmarking for arbitrary unitaries.
+* **RZZ error** (Heron) - Error in the RZZ gate averaged over the RZZ angles using a variant of randomized benchmarking for arbitrary unitaries.
+
 
 ## Two-qubit gate error (layered)
 
