indents and spaces

--- a/learning/modules/computer-science/vqe.ipynb
+++ b/learning/modules/computer-science/vqe.ipynb
@@ -44,7 +44,7 @@
    "id": "503b34cd-1c45-4342-b6d8-e853ef9edf3c",
    "metadata": {},
    "source": [
-    "## 1. Introduction\n",
+    "## Introduction\n",
     "\n",
     "Since the development of the quantum mechanical model in the early 20th century, scientists have understood that electrons do not follow fixed paths around an atom's nucleus but rather exist in regions of probability called orbitals. These orbitals correspond to specific, discrete energy levels that electrons can occupy. Electrons naturally reside in the lowest available energy levels, known as the ground state. However, if an electron absorbs sufficient energy, it can jump to a higher energy level, entering an excited state. This excited state is temporary, and the electron will eventually return to a lower energy level, releasing the absorbed energy, often in the form of light. This fundamental process of energy absorption and emission is crucial to understanding how atoms interact and form bonds.\n",
     "\n",
@@ -58,9 +58,9 @@
    "id": "5fd6876b-fb75-4862-8cd8-4adc5ddeff40",
    "metadata": {},
    "source": [
-    "## 2. VQE - A variational quantum algorithm for eigenvalue problem\n",
+    "## VQE - A variational quantum algorithm for eigenvalue problems\n",
     "\n",
-    "### Approximation techniques for chemistry - Variational Principle and the basis set\n",
+    "### Approximation techniques for chemistry - variational principle and the basis set\n",
     "\n",
     "Erwin Schrödinger's contributions to quantum mechanics go beyond introducing a new electronic model; fundamentally, he established wave mechanics by developing the famous time-dependent Schrödinger equation:\n",
     "\n",
@@ -70,7 +70,7 @@
     "\n",
     "Here, $\\hat{H}$ is the Hamiltonian operator, which represents the total energy of the system, and $|\\psi\\rangle$ is the wave function that contains all the information about the system’s quantum state. (Note: $\\frac{d}{dt}$ is the total time derivative, and we do not explicitly include the energy eigenvalue $E$ here.)\n",
     "\n",
-    "However, in many practical applications—such as determining the allowed energy levels of atoms and molecules—we instead use the time-independent Schrödinger equation (energy eigenvalue equation), which is derived from the time-dependent form by assuming a stationary state. A stationary state is a quantum state in which the probability density of finding a particle at a given point in space does not change over time.\n",
+    "However, in many practical applications — such as determining the allowed energy levels of atoms and molecules — we instead use the time-independent Schrödinger equation (energy eigenvalue equation), which is derived from the time-dependent form by assuming a stationary state. A stationary state is a quantum state in which the probability density of finding a particle at a given point in space does not change over time.\n",
     "\n",
     "$$ \\hat{H}|\\psi\\rangle = E|\\psi\\rangle $$\n",
     "\n",
@@ -83,20 +83,20 @@
     "\n",
     "1. Variational principle\n",
     "\n",
-    "This method approximates the wave function and adjusts it to get as close as possible to the target energy, usually the ground state energy of the system. The key idea behind the variational principle is simple:\n",
+    "    This method approximates the wave function and adjusts it to get as close as possible to the target energy, usually the ground state energy of the system. The key idea behind the variational principle is simple:\n",
     "\n",
-    "- If we guess a wave function $\\Psi_\\text{trial}$ (a \"trial function\"), the energy calculated from it will always be equal to or higher than the ground state energy ($E_0$) of the system.\n",
-    "$$E_\\text{approx} = \\frac{\\langle \\Psi_\\text{trial}|\\hat{H}|\\Psi_\\text{trial}\\rangle}{\\langle \\Psi_\\text{trial}|\\Psi_\\text{trial}\\rangle} \\geq E_0$$\n",
-    "- By adjusting parameters $\\theta$ in the trial function, $|\\Psi_\\text{trial}(\\theta)\\rangle$, we can get a better and better approximation of the ground state energy.\n",
-    "- Its accuracy heavily depends on the choice of the trial wave function $\\Psi_\\text{trial}$. A poorly-chosen trial function may lead to an energy estimate that is far from accurate.\n",
+    "    - If we guess a wave function $\\Psi_\\text{trial}$ (a \"trial function\"), the energy calculated from it will always be equal to or higher than the ground state energy ($E_0$) of the system.\n",
+    "    $$E_\\text{approx} = \\frac{\\langle \\Psi_\\text{trial}|\\hat{H}|\\Psi_\\text{trial}\\rangle}{\\langle \\Psi_\\text{trial}|\\Psi_\\text{trial}\\rangle} \\geq E_0$$\n",
+    "    - By adjusting parameters $\\theta$ in the trial function, $|\\Psi_\\text{trial}(\\theta)\\rangle$, we can get a better and better approximation of the ground state energy.\n",
+    "    - Its accuracy heavily depends on the choice of the trial wave function $\\Psi_\\text{trial}$. A poorly-chosen trial function may lead to an energy estimate that is far from accurate.\n",
     "\n",
     "2. Basis set approximation\n",
     "\n",
-    "The second approximation method comes in the stage of constructing the wave function—the basis set approach. In quantum chemistry, solving the Schrödinger equation exactly for molecules is impossible. Instead, we approximate the complex, multi-electron wave function by building it up from simpler, predefined mathematical functions. A **basis set** is essentially a collection of these known mathematical functions, typically centered on the atoms in the molecule, that are used as building blocks to represent the shape and behavior of the electrons in the system. Think of it like trying to recreate a detailed sculpture using only a collection of standard LEGO bricks – the more types and sizes of bricks you have (the larger the basis set), the more accurately you can approximate the original shape.\n",
+    "    The second approximation method comes in the stage of constructing the wave function — the basis set approach. In quantum chemistry, solving the Schrödinger equation exactly for molecules is impossible. Instead, we approximate the complex, multi-electron wave function by building it up from simpler, predefined mathematical functions. A **basis set** is essentially a collection of these known mathematical functions, typically centered on the atoms in the molecule, that are used as building blocks to represent the shape and behavior of the electrons in the system. Think of it like trying to recreate a detailed sculpture using only a collection of standard LEGO bricks – the more types and sizes of bricks you have (the larger the basis set), the more accurately you can approximate the original shape.\n",
     "\n",
-    "These basis functions are often inspired by the analytical solutions for simple systems like the hydrogen atom, taking forms like Gaussian or Slater-type functions, though they are still approximations. Instead of working with the theoretically \"exact\" but intractable full molecular orbitals, we express them as a linear combination (a sum with coefficients) of these basis functions. This method is known as the Linear Combination of Atomic Orbitals (LCAO) approach when the basis functions resemble atomic orbitals. By optimizing the coefficients in this linear combination, we can find the best possible approximate wave function and energy within the limitations of the chosen basis set.\n",
-    "- The more functions included in the basis set, the better the approximation, but this comes at the cost of higher computational effort.\n",
-    "- A small basis set provides a rough estimate, while a large basis set gives more precise results at the expense of requiring significantly more computational resources.\n",
+    "    These basis functions are often inspired by the analytical solutions for simple systems like the hydrogen atom, taking forms like Gaussian or Slater-type functions, though they are still approximations. Instead of working with the theoretically \"exact\" but intractable full molecular orbitals, we express them as a linear combination (a sum with coefficients) of these basis functions. This method is known as the Linear Combination of Atomic Orbitals (LCAO) approach when the basis functions resemble atomic orbitals. By optimizing the coefficients in this linear combination, we can find the best possible approximate wave function and energy within the limitations of the chosen basis set.\n",
+    "    - The more functions included in the basis set, the better the approximation, but this comes at the cost of higher computational effort.\n",
+    "    - A small basis set provides a rough estimate, while a large basis set gives more precise results at the expense of requiring significantly more computational resources.\n",
     "\n",
     "To summarize, to make calculations feasible and reduce computational cost, we use the variational principle by approximating the wave function, which reduces the computational complexity and allows for iterative optimization to minimize energy. Meanwhile, the basis set approach simplifies calculations by representing atomic orbitals as a combination of predefined functions, rather than solving for a continuous wave function directly.\n",
     "\n",
@@ -109,7 +109,7 @@
     "\n",
     "a. Normalize the trial wave function by determining $A$ such that\n",
     "\n",
-    "$$ \\int_{-\\infty}^{\\infty} |\\Psi_\\text{trial}|^2 dx = 1 $$\n",
+    "$$ \\int_{-\\infty}^{\\infty} |\\Psi_\\text{trial}|^2 dx = 1 $$.\n",
     "\n",
     "b. Compute the expectation value of the Hamiltonian $\\hat{H}$ given by:\n",
     "\n",
@@ -139,7 +139,8 @@
     "\n",
     "$$ \\hat{H} = -\\frac{\\hbar^2}{2m} \\frac{d^2}{dx^2} + \\frac{1}{2} m \\omega^2 x^2 $$\n",
     "\n",
-    "- Kinetic Energy Expectation Value\n",
+    "- Kinetic energy expectation value\n",
+    "\n",
     "$$ \\langle T \\rangle = -\\frac{\\hbar^2}{2m} \\int_{-\\infty}^{\\infty} \\Psi_\\text{trial}^* \\frac{d^2}{dx^2} \\Psi_\\text{trial} dx $$\n",
     "\n",
     "Taking the second derivative:\n",
@@ -164,7 +165,7 @@
     "\\langle T \\rangle = \\frac{\\hbar^2 \\alpha}{2m}\n",
     "$$\n",
     "\n",
-    "- Potential Energy Expectation Value\n",
+    "- Potential energy expectation value\n",
     "$$\n",
     "\\langle V \\rangle = \\frac{1}{2} m \\omega^2 \\int_{-\\infty}^{\\infty} x^2 |\\Psi_\\text{trial}|^2 dx\n",
     "$$\n",
@@ -181,14 +182,15 @@
     "\\langle V \\rangle = \\frac{m \\omega^2}{4\\alpha}\n",
     "$$\n",
     "\n",
-    "- Total Energy Expectation Value\n",
+    "- Total energy expectation value\n",
     "$$\n",
     "\\therefore E_\\text{approx}(\\alpha) = \\frac{\\hbar^2 \\alpha}{2m} + \\frac{m \\omega^2}{4\\alpha}\n",
     "$$\n",
     "\n",
     "\n",
     "\n",
-    "(c) Optimize $ \\alpha $ for Minimum Energy\n",
+    "(c) Optimize $ \\alpha $ for minimum energy\n",
+    "\n",
     "Differentiate:\n",
     "\n",
     "$$\n",
