tweaks and wave function

--- a/learning/modules/computer-science/vqe.ipynb
+++ b/learning/modules/computer-science/vqe.ipynb
@@ -347,27 +347,27 @@
    "id": "e25e11f8-9961-4bd1-8b75-a3eb954b99a6",
    "metadata": {},
    "source": [
-    "## 3. Compute the ground state energy of a hydrogen atom with VQE\n",
+    "## Compute the ground state energy of a hydrogen atom with VQE\n",
     "\n",
-    "Now, let's use what we've learned to compute the ground state energy of a hydrogen atom. Throughout the module, we will use a framework for quantum computing known as \"Qiskit patterns\", which breaks workflows into the following steps:\n",
+    "Now, let's use what we've learned to compute the ground state energy of a hydrogen atom. Throughout the module, we will use a framework for quantum computing known as \"Qiskit patterns\", which breaks down workflows into the following steps:\n",
     "\n",
     "- Step 1: Map classical inputs to a quantum problem\n",
     "- Step 2: Optimize problem for quantum execution\n",
-    "- Step 3: Execute using Qiskit Runtime Primitives\n",
+    "- Step 3: Execute using Qiskit Runtime primitives\n",
     "- Step 4: Post-processing and classical analysis\n",
     "\n",
-    "![Qiskit Pattern](/learning/images/modules/computer-science/vqe/patterns.svg)\n",
+    "![Qiskit pattern](/learning/images/modules/computer-science/vqe/patterns.svg)\n",
     "\n",
     "We will generally follow these steps, though we may not always explicitly label them.\n",
     "\n",
-    "Let's start by loading some necessary packages including Runtime primitives. We will also select the least busy quantum computer available to us.\n",
+    "Let's start by loading some necessary packages, including Qiskit Runtime primitives. We will also select the least busy quantum computer available to us.\n",
     "\n",
     "There is code below for saving your credentials upon first use. Be sure to delete this information from the notebook after saving it to your environment, so that your credentials are not accidentally shared when you share the notebook. See [Set up your IBM Cloud account](/docs/guides/cloud-setup#3-connect-qiskit-with-your-service-instance) and [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) for more guidance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "31b7daec-b3f8-4cc4-8790-c650a3385ede",
    "metadata": {},
    "outputs": [
@@ -394,8 +394,8 @@
     "service = QiskitRuntimeService()\n",
     "\n",
     "# Use the least busy backend, or uncomment the loading of a specific backend like \"ibm_brisbane\".\n",
-    "# backend = service.least_busy(operational=True, simulator=False, min_num_qubits = 127)\n",
-    "backend = service.backend(\"ibm_brisbane\")\n",
+    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits = 127)\n",
+    "# backend = service.backend(\"ibm_brisbane\")\n",
     "print(backend.name)"
    ]
   },
@@ -440,9 +440,9 @@
     "\n",
     "$$\\hat{H} = -0.2355 I + 0.2355 Z$$\n",
     "\n",
-    "Here, $I$ represents the Identity operator and $Z$ represents the Pauli-Z operator, acting on a single qubit. The coefficients are derived from the integrals calculated using the STO-6G basis set at this particular bond distance with proper transformation.\n",
+    "Here, $I$ represents the identity operator and $Z$ represents the Pauli-Z operator, acting on a single qubit. The coefficients are derived from the integrals calculated using the STO-6G basis set at this particular bond distance with proper transformation.\n",
     "\n",
-    "With this Hamiltonian defined, we can now use VQE to compute its ground state energy. It is useful to compare our calculated ground state energy to expected values. For a single, isolated hydrogen atom (H), the ground state energy is exactly -0.5 Hartree (in the absence of relativistic effects, etc.). Let us compute the exact ground state energy of *our specific qubit Hamiltonian* as defined above and compare it to relevant known values."
+    "With this Hamiltonian defined, we can now use VQE to compute its ground state energy. It is useful to compare our calculated ground state energy to expected values. For a single, isolated hydrogen atom (H), the ground state energy is exactly -0.5 Hartree (in the absence of relativistic effects). Let us compute the exact ground state energy of *our specific qubit Hamiltonian* as defined above and compare it to relevant known values."
    ]
   },
   {
@@ -483,7 +483,7 @@
    "id": "3f49bde2-0b3a-4292-8fe5-9fccc1a92d97",
    "metadata": {},
    "source": [
-    "Next, we need a parameterized quantum circuit, called an ansatz, to prepare a trial wavefunction $\\Psi_\\text{trial}$ for the ground state. The goal is to find the parameters $\\theta$ that minimize the energy expectation value $\\langle\\psi(\\theta)|\\hat{H}|\\psi(\\theta)\\rangle$. The choice of ansatz is crucial because it determines the set of possible quantum states that our circuit can prepare. A \"good\" ansatz is one that is flexible enough to represent a state very close to the true ground state of the Hamiltonian we are studying, but not so complex that it requires too many parameters or too deep a circuit for current quantum computers.\n",
+    "Next, we need a parameterized quantum circuit, called an ansatz, to prepare a trial wave function $\\Psi_\\text{trial}$ for the ground state. The goal is to find the parameters $\\theta$ that minimize the energy expectation value $\\langle\\psi(\\theta)|\\hat{H}|\\psi(\\theta)\\rangle$. The choice of ansatz is crucial because it determines the set of possible quantum states that our circuit can prepare. A \"good\" ansatz is one that is flexible enough to represent a state very close to the true ground state of the Hamiltonian we are studying, but not so complex that it requires too many parameters or too deep a circuit for current quantum computers.\n",
     "\n",
     "Here, we will try 3 different one-qubit ansats to see which one provides better \"coverage\" of the possible quantum states a single qubit can be in. The \"coverage\" refers to the range of quantum states that the ansatz circuit can produce by varying its parameters.\n",
     "\n",
@@ -1522,10 +1522,10 @@
     "\n",
     "\n",
     "### True/false\n",
-    "1. The variational principle states that the expectation value of the energy for any trial wavefunction is always greater than or equal to the true ground state energy.\n",
-    "2. A basis set is a collection of functions used to approximate quantum wavefunctions.\n",
+    "1. The variational principle states that the expectation value of the energy for any trial wave function is always greater than or equal to the true ground state energy.\n",
+    "2. A basis set is a collection of functions used to approximate quantum wave functions.\n",
     "3. VQE is a quantum algorithm used to exactly solve the Schrödinger equation for a given Hamiltonian.\n",
-    "4. In VQE, a parameterized quantum circuit (an ansatz) is used to prepare trial wavefunctions.\n",
+    "4. In VQE, a parameterized quantum circuit (an ansatz) is used to prepare trial wave functions.\n",
     "5. The choice of optimizer in VQE (e.g., COBYLA, SPSA, or ADAM) does not impact the quality of the result.\n",
     "6. Qiskit's `Estimator` is used to directly compute expectation values of Hamiltonians in VQE.\n",
     "\n",
