--- a/learning/modules/computer-science/vqe.ipynb
+++ b/learning/modules/computer-science/vqe.ipynb
@@ -1079,7 +1079,7 @@
    "source": [
     "## Compute the ground state energy of the hydrogen molecule with VQE\n",
     "\n",
-    "Now that we have looked at the overall process of VQE using H atoms, we will now calculate the ground state energy of the H2 molecule more quickly."
+    "Now that we have looked at the overall process of VQE using $H$ atoms, we will now calculate the ground state energy of the $H_2$ molecule more quickly."
    ]
   },
   {
