--- a/learning/modules/computer-science/vqe.ipynb
+++ b/learning/modules/computer-science/vqe.ipynb
@@ -1915,6 +1915,8 @@
    "version": "3"
   },
   "title": "Variational Quantum Eigensolver",
+  "in_page_toc_max_heading_level": 2,
+  "in_page_toc_min_heading_level": 2,
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {},
