--- a/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
+++ b/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "One of the most compelling applications of quantum computers is their ability to simulate natural phenomena. In this lesson, we will explore how quantum computers are used to tackle quantum dynamics problems—specifically, how they help us understand the time-evolution of a quantum system.\n",
+    "One of the most compelling applications of quantum computers is their ability to simulate natural phenomena. In this lesson, we will explore how quantum computers are used to solve quantum dynamics problems—specifically, how they help us understand the time-evolution of a quantum system.\n",
     "\n",
     "First, we will take a broad look at the general steps involved in conducting these simulations. Then, we will examine a concrete example: IBM’s 2023 experiment that showcased the concept of quantum utility. This experiment serves as an excellent case study for understanding the practical steps and implications of simulating quantum dynamics with real quantum hardware.\n",
     "By the end, you will have a clearer picture of how researchers approach these challenges and why quantum simulation holds such promise for advancing our understanding of the natural world.\n",
